Fixed bug #36840 (Memory leak if cast operator throws an exception that is caught)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@210035 c90b9560-bf6c-de11-be94-00142212c4b1